# pycroscope

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: conformance.yml  doc.yml  lint.yml  publish.yml  test.yml  third_party.yml
docs/: annotated_types.md  changelog.md  conf.py  configuration.md  design.md  faq.md  glossary.rst  index.rst  requirements.txt  type_evaluation.md  type_params.md  typesystem.md
docs/reference/: annotations.rst  ast_annotator.rst  extensions.rst  name_check_visitor.rst  runtime.rst  signature.rst  stacked_scopes.rst  value.rst
pycroscope/: __init__.py  analysis_lib.py  annotated_types.py  annotations.py  arg_spec.py  ast_annotator.py  asynq_checker.py  asynq_test.toml  asynq_tests.py  attributes.py  boolability.py  checker.py  dataclass.py  error_code.py  extensions.py  find_unused.py  format_strings.py  functions.py  implementation.py  importer.py  input_sig.py  intersection_call.py  name_check_visitor.py  node_visitor.py  options.py  patma.py  predicates.py  reexport.py  regex_check.py  relations.py  runtime.py  safe.py  shared_options.py  signature.py  stacked_scopes.py  suggested_type.py  test_analysis_lib.py  test_annotated_types.py  test_annotations.py  test_arg_spec.py  (+65 more)
pycroscope/stubs/: README
pycroscope/stubs/_pycroscope_tests-stubs/: aliases.pyi  overloaded.pyi  paramspec.pyi  recursion.pyi  stub_property.pyi
pycroscope/stubs/pycroscope-stubs/: extensions.pyi
tools/: __init__.py  check_full_coverage.py  conformance_ci.py  conformance_known_failures.txt  full_coverage_files.txt  run_third_party.py  taxonomy_ci.py  test_conformance_ci.py  test_duplicate_tests.py  test_taxonomy_ci.py  test_third_party_ci.py  third_party_ci.py
