[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycroscope"
version = "0.3.0"
description = "A static analyzer for Python"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  { name = "Jelle Zijlstra", email = "jelle.zijlstra@gmail.com" }
]
license = {text = "Apache Software License"}
requires-python = ">=3.10"
keywords = ["type checker", "static analysis"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

dependencies = [
  "typeshed_client>=2.1.0",
  "typing_extensions>=4.13.0",
  "tomli>=1.1.0; python_version < '3.11'",
]

[project.optional-dependencies]
tests = [
  "pytest",
  "mypy_extensions",
  "attrs",
  "pydantic",
  "annotated-types",
  "ast_decompiler>=0.4.0",
]
asynq = ["asynq", "qcore>=0.5.1"]
codemod = ["codemod"]
full = ["asynq", "qcore>=0.5.1", "ast_decompiler>=0.4.0", "codemod"]

[dependency-groups]
docs = [
  "myst-parser==4.0.0",
  "sphinx==7.4.7",
  "pygments==2.19.1",
]

[project.urls]
Homepage = "https://github.com/JelleZijlstra/pycroscope"

[project.scripts]
pycroscope = "pycroscope.__main__:main"

[tool.setuptools]
packages = ["pycroscope"]

[tool.setuptools.package-data]
# These are useful for unit tests of pycroscope extensions
# outside the package.
pycroscope = ["test.toml", "asynq_test.toml", "stubs/*/*.pyi", "py.typed"]

[tool.black]
target-version = ['py310']
include = '\.pyi?$'
skip-magic-trailing-comma = true
preview = true
exclude = '''
/(
    \.git
  | \.ipython
  | \.ipython64
  | \.mypy_cache
  | \.tox
  | \.venv
)/
'''

[tool.pycroscope]
paths = ["pycroscope"]
import_paths = ["."]
enforce_no_unused = true
enforce_no_unused_attributes = true
ignore_unused = ["pycroscope.relations._ignore_unused_sizeof_pyobject"]
ignore_unused_attribute_predicates = [
  "pycroscope.name_check_visitor._ignore_unused_ast_visit_methods",
  "pycroscope.name_check_visitor._ignore_unused_test_helper_attributes",
]
ignored_unused_attribute_paths = [
  "pycroscope.format_strings.ReplacementField.conversion",
  "pycroscope.format_strings.ReplacementField.index_attribute",
  "pycroscope.analysis_lib._FakeLoader.get_source",
  "pycroscope.analysis_lib.Sentinel.name",
  "pycroscope.format_strings.PercentFormatString.is_bytes",
  "pycroscope.value.CustomMapping.keys",
  "pycroscope.value.OrBound.bounds",
  "pycroscope.node_visitor._PatchWithDescription.render_range",
  "pycroscope.node_visitor._Query.generate_patches",
  "pycroscope.find_unused.UnusedObject.value",
  "pycroscope.node_visitor.BaseNodeVisitor.had_failure",
  "pycroscope.node_visitor.Replacement.error_str",
  "pycroscope.stacked_scopes._LookupContext.node",
  # Called in a lambda
  "pycroscope.options.ConfigOption.sort_key",
  # Called through an Any
  "pycroscope.checker.Checker.perform_final_checks",
  # Used dynamically, not convinced this one is not used
  "pycroscope.name_check_visitor.NameCheckVisitor.get_synthetic_class",
  "pycroscope.arg_spec.AnnotationsContext.arg_spec_cache",
  "pycroscope.checker.Checker.resolve_name",
  "pycroscope.signature.CallContext.sig",
  "pycroscope.checker.Checker.resolve_name",
  "pycroscope.value.CanAssignContext.resolve_name",
  "pycroscope.value.DataclassFieldInfo.substitute_typevars",
  "pycroscope.value.DataclassFieldInfo.walk_values",
  "pycroscope.value.PropertyInfo.substitute_typevars",
  "pycroscope.value.PropertyInfo.walk_values",
  "pycroscope.value.TypeVarParam.get_fallback_value",
  "pycroscope.value.TypeVarParam.substitute_typevars",
  "pycroscope.value.TypeVarParam.walk_values",
]

possibly_undefined_name = true
use_fstrings = true
missing_return_annotation = true
missing_parameter_annotation = true
unused_variable = true
value_always_true = true
suggested_parameter_type = true
suggested_return_type = true
incompatible_override = true
missing_generic_parameters = true

[[tool.pycroscope.overrides]]
module = "pycroscope.typevar"
implicit_any = true

[[tool.pycroscope.overrides]]
module = "pycroscope.yield_checker"
implicit_any = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "F",
  "E",
  "I",  # import sorting
  "UP",
]

ignore = [
  "B008",  # do not perform function calls in argument defaults
  "F811",  # redefinition of unused '...'
  "F821",  # undefined name
  "F505",  # .format() stuff
  "F507",  # .format() stuff
  "F522",  # .format() stuff
  "F523",  # .format() stuff
  "F524",  # .format() stuff
  "F823",  # local variable referenced before assignment
  "F601",  # dictionary key name repeated with different values
  "E721",  # do not compare types, use 'isinstance()'
  "F841",  # local variable is assigned to but never used
  "E742",  # Ambiguous class name
  "E731",  # do not assign a lambda expression, use a def
  "E741",  # ambiguous variable name
]

[tool.ruff.lint.per-file-ignores]
"pycroscope/test_*.py" = [
  "UP",  # Want to test old-style code
]
"pycroscope/annotations.py" = [
  "UP006",  # Need to refer to typing.Type
]
